--- a/public/less/design.less
+++ b/public/less/design.less
@@ -70,3 +70,25 @@ section#content {
         }
     }
 }
+
+table {
+    h2, h3, h4 {
+        margin: 0;
+        line-height: @size * 1.5;
+        display: block;
+        font-weight: normal;
+    }
+
+    h2 {
+        font-size: @size * 1.666;
+    }
+
+    h3 {
+        font-size: @size * 1.167;
+    }
+
+    h4 {
+        font-size: @size;
+        font-style: italic;
+    }
+}
