--- a/view/critters.dust
+++ b/view/critters.dust
@@ -5,19 +5,20 @@
                 <thead>
                     <tr>
                         <th>Monster</th>
-                        <th>Venue</th>
                         <th>Power</th>
                         <th>Body</th>
-                        <th>Type</th>
-                        <th>Creator</th>
+                        <th>Icon</th>
                     </tr>
                 </thead>
                 <tbody>
 
                     {#monsters}
                         <tr>
-                            <td>{monsters.name}</td>
-                            <td>{venue}</td>
+                            <td>
+                                <h2>{.name}</h2>
+                                <h3>{venue}</h3>
+				<h4>{type}</h4>
+                            </td>
                             <td>{power}</td>
                             <td>
                                 <ul>
@@ -29,11 +30,7 @@
                                 </ul>
                             </td>
                             <td>
-                                {type}
-                                <img src="{icon}" />
-                            </td>
-                            <td>
-                                {creator}
+                                <img src="{typeicon}" />
                             </td>
                         </tr>
                     {/monsters}
