--- a/view/layout.dust
+++ b/view/layout.dust
@@ -3,6 +3,8 @@
     <head>
         <link rel="dns-prefetch" href="//ajax.googleapis.com" />
         <title>CritterSquare</title>
+            
+        <link rel="text/css" href="/css/design.min.css" />
     </head>
 
     <body>
