initial attempt at hooking passport into sails.js

--- a/views/layout.handlebars
+++ b/views/layout.handlebars
@@ -34,7 +34,7 @@
   </head>
 
   <body>
-    <%- body %>
+    {{{body}}}
 
 
 
@@ -89,6 +89,16 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dust/account.js"></script>
+    <script src="/js/dust/champions.js"></script>
+    <script src="/js/dust/critters.js"></script>
+    <script src="/js/dust/home.js"></script>
+    <script src="/js/dust/layout.js"></script>
+    <script src="/js/layout.js"></script>
+    <script src="/js/src/dust-core-0.3.0.min.js"></script>
+    <script src="/js/src/jqmobile-1.2.0.min.js"></script>
+    <script src="/js/src/lab.min.js"></script>
+    <script src="/js/src/less-1.3.1.min.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
